# DeepSeek-Trader

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: signal.yml
bot/: backtest_validator.py  consensus_scorer.py  data_fetcher.py  discord_notifier.py  indicator_engine.py  main.py  onchain_engine.py  risk_manager.py  sentiment_fetcher.py  signal_formatter.py  smc_engine.py  strategy_engine.py
config/: .env.example  settings.yaml
docker/: Dockerfile
