[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-signal-bot"
version = "1.0.0"
description = "Unified Crypto Signal Engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.0",
    "pandas>=1.5",
    "pandas-ta>=0.3",
    "TA-Lib>=0.4",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "requests>=2.28",
    "discord-webhook>=1.0",
    "loguru>=0.6",
    "schedule>=1.1",
]
